feat(backend): computed expiring/expired endpoint
